# cuadernillo1

./: CMakeLists.txt  README.md  main  main.cpp  makefile  nombres.txt  tad  tcomplejo.cpp  tcomplejo.h  tlistacom.cpp  tlistacom.h  tvectorcom.h
include/: tcomplejo.h  tlistacom.h  tvectorcom.h
lib/: tcomplejo.cpp  tlistacom.cpp  tvectorcom.cpp
src/: main.cpp  tad.cpp
tests/lista/: tad12.cpp
