cmake_minimum_required(VERSION 3.17)
project(PRACTICA)

set(CMAKE_CXX_STANDARD 14)

add_executable(PRACTICA tad)

/*
  gbd

  r: ejecuta el programa
  where (bt): muestra pila de llamada que ha dado lugar al posible fallo
  frame: Desde qué línea de código se ha ejecutado cada frame
  list: ver información de lo que ocurre en cada frame
  info locals: ver valor variables locales
  info args: ver argumentos


*/